# optimization-basic

./: README.md  optimization-basic.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Data/: Sparse.hs
src/Numeric/Optimization/Basic/: LP.hs
test/: LibSpec.hs
