name:                optimization-basic
version:             0.1.0.0
synopsis:            Basic algorithms for numeric optimization in native Haskell
description:         Please see README.md
homepage:            https://github.com/ocramz/optimization-basic
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           Marco Zocca 2016
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Data.Sparse
                       Data.Sparse.IntMap
                       Numeric.Optimization.Basic.LP
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec >= 2.2.3
                     , sparse-linear-algebra

executable optimization-basic
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hspec >= 2.2.3
                     , optimization-basic

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , hspec >= 2.2.3
                     , optimization-basic

source-repository head
  type:     git
  location: https://github.com/ocramz/optimization-basic
